Fix too wide

--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -319,6 +319,7 @@ footer {
     float: none;
     position: static;
     width: auto;
+    max-width: 100%;
     padding: 20px 0;
     margin: 0 50px 20px 50px;
   }
